--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,15 +1,18 @@
 .App {
+  box-sizing: border-box;
   text-align: center;
+  max-width: 1100px;
+  margin: 0 auto;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  /* animation: App-logo-spin infinite 20s linear; */
+  height: 100px;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
+  background-color: #707070;
+  /* height: 150px; */
   padding: 20px;
   color: white;
 }
@@ -18,9 +21,14 @@
   font-size: 1.5em;
 }
 
-.App-intro {
-  font-size: large;
+.externalLinks > a {
+  margin: 5px;
 }
+
+.externalLinks > a > img:hover {
+  opacity: .3;
+}
+
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
