--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,14 +1,34 @@
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  src:
+    local('Lato'),
+    local('Lato-Regular'),
+    url(./Lato-Regular.ttf) format('TrueType');
+}
+
+@font-face {
+  font-family: 'Bungee';
+  font-style: normal;
+  font-weight: 400;
+  src:
+    local('Bungee'),
+    local('Bungee-Regular'),
+    url(./Bungee-Regular.ttf) format('TrueType');
+}
+
 body {
   background: #bebebe;
+  font-family: 'Lato-Regular', sans-serif;
 }
 
 a {
   text-decoration: none;
   color: #fff;
   font-size: 24px;
-  transition: color .5s linear;
 }
 
-a:hover {
-  color: #ff5500;
+.navigation a span {
+  font-family: 'Bungee', sans-serif;
 }
