--- a/src/style/Projects.css
+++ b/src/style/Projects.css
@@ -17,7 +17,7 @@
   }
 }
 
-@media screen and (min-width: 1160px) {
+@media screen and (min-width: 1170px) {
   .projectNav {
     width: 60%;
   }
@@ -48,71 +48,96 @@
   box-sizing: border-box;
   margin-top: 15px;
   width: 100%;
-  display: flex;
+  /* display: flex;
   justify-content: space-around;
-  flex-wrap: wrap;
+  flex-wrap: wrap; */
 }
 
+/* PROJECT ITEM */
+
 .projectItem {
-  position: relative;
   box-sizing: border-box;
-  margin-top: 15px;
-  width: 100%;
-  min-height: 300px;
-  border-radius: 15px;
-  border: 1px solid #ff5500;
+  position: relative;
   display: flex;
   flex-direction: column;
+
+  background: #fff;  
+  margin-top: 15px;
+  width: 100%;
+  border-radius: 15px;
+  border: 3px solid #ff5500;
+  transition: background 1s linear;
 }
+
+
 
 @media screen and (min-width:620px) {
   .projectItem {
+    min-height: 320px;
+    float: left;
     width: 48%;
+    margin: 1%;
+  }
+
+  .projectItem:hover {
+    background: #707070;
   }
 }
 
-@media screen and (min-width: 1160px) {
+@media screen and (min-width: 1170px) {
   .projectItem {
-    width: 30%;
+    width: 380px;
+    margin-left: 5px;
+    margin-right: 5px;
   }
 }
 
-.projectItem {
-  transition: background 1s linear;
-  min-height: 300px;
-  background: #fff;
-}
-
-.projectItem:hover {
-  background: #707070;
-}
+/* PROJECT INFO */
 
 .projectTitle {
   font-family: 'Bungee', sans-serif;
   color: #ff5500;
-  position: absolute;
   font-size: 25px;
-  width: 80%;
-  top: 40px;
-  left: 50%;
-  transform: translate(-50%);
-  transition: opacity 1s linear;
-}
-
-.projectItem:hover > .projectTitle,
-.projectItem:active > .projectTitle {
-  opacity: 0;
+  margin: 25px auto;
+  width: 70%;
 }
 
 .projectDescription {
+  margin: 0 10%;
   text-align: justify;
-  line-height: 1.5em;
-  color: #fff;
-  font-size: .9em;
-  opacity: 0;
-  margin: auto;
-  padding: 20px;
-  transition: opacity 1s linear;
+}
+
+
+@media screen and (min-width: 620px) {
+  .projectTitle {
+    /* font-family: 'Bungee', sans-serif;
+    color: #ff5500; */
+    position: absolute;
+    /* font-size: 25px; */
+    /* width: 80%; */
+    top: 40px;
+    left: 50%;
+    transform: translate(-50%);
+    transition: opacity 1s linear;
+
+    margin-top: 0;
+  }
+
+  .projectItem:hover > .projectTitle,
+  .projectItem:active > .projectTitle {
+    opacity: 0;
+  }
+
+  .projectDescription {
+    /* text-align: justify; */
+    line-height: 1.5em;
+    color: #fff;
+    font-size: .9em;
+    /* opacity: 0; */
+    margin: auto;
+    padding: 20px;
+    transition: opacity 1s linear;
+  }
 }
 
 .projectItem:hover > .projectDescription,
@@ -129,7 +154,8 @@
 }
 
 .projectLinks div {
-  margin-top: 10px;
+  /* margin-top: 10px; */
+  margin: 10px 0;
 }
 
 .projectLinks div a {
@@ -140,7 +166,7 @@
 }
 
 .projectLinks div:hover a {
-  color: #ff5500;
+  color: #000000;
 }
 
 .ProjectIcon {
