--- a/src/style/Projects.css
+++ b/src/style/Projects.css
@@ -60,7 +60,6 @@
   position: relative;
   display: flex;
   flex-direction: column;
-
   background: #fff;  
   margin-top: 15px;
   width: 100%;
@@ -99,7 +98,8 @@
   color: #ff5500;
   font-size: 25px;
   margin: 25px auto;
-  width: 70%;
+  width: 80%;
+  line-height: 30px;
 }
 
 .projectDescription {
